[Add] kata 1 done